fix: resolved an overflow problem on multiple chat links in the side bar - content now properly scrolls. Additionally, autoscrolling on chats nor works correctly.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+}
+
 :root, .light, .light-theme {
     --gray-1: #fdfdfd;
     --gray-2: #f9f9f9;
